Rewored HTML and added SASS - Added new bezel image. - Fixed flicker effect. - Added SASS to help with code clarity.

--- a/style.css
+++ b/style.css
@@ -1,31 +1,2 @@
-body {
-    box-sizing: border-box;
-    min-height: 100vh;
-    margin: 0;
-    background-color: #000;
-    color: #00FF66;
-    text-shadow: 0 0 10px #282828, 0 0 20px #00FF66;
-}
-
-.computer {
-    border: 50px solid #383838;
-    min-height: 100vh;
-}
-
-.border {
-    border: 50px solid #303030;
-    border-radius: 7.5px;
-    min-height: 100vh;
-}
-
-.terminal {
-    margin: 10px;
-}
-
-#inner-terminal {
-    padding: 10% 20%;
-    min-height: 100vh;
-    background: radial-gradient(#444444, #282828);
-    font-family: courier, monospace;
-    font-size: 22px;
-}
+@import url("https://fonts.googleapis.com/css?family=VT323&display=swap");*{-webkit-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0}#monitor{background-color:#000}#panel{position:relative;border:30px solid transparent;border-image-outset:0;border-image-slice:100%;border-image-source:none;border-image-source:url(bezel.png);border-image-slice:30 fill;border-image-outset:0;overflow:hidden}#screen{min-height:100vh;background:radial-gradient(circle, #003716 0%, #000 100%)}#screen::after{content:" ";display:block;position:absolute;top:0;left:0;bottom:0;right:0;background:rgba(18,16,16,0.1);opacity:0;z-index:2;pointer-events:none;-webkit-animation:flicker 0.15s infinite;animation:flicker 0.15s infinite}#screen::before{content:" ";display:block;position:absolute;top:0;left:0;bottom:0;right:0;background:-webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(18,16,16,0)), color-stop(50%, rgba(0,0,0,0.25))),-webkit-gradient(linear, left top, right top, from(rgba(255,0,0,0.06)), color-stop(rgba(0,255,0,0.02)), to(rgba(0,0,255,0.06)));background:linear-gradient(rgba(18,16,16,0) 50%, rgba(0,0,0,0.25) 50%),linear-gradient(90deg, rgba(255,0,0,0.06), rgba(0,255,0,0.02), rgba(0,0,255,0.06));z-index:2;background-size:100% 2px, 3px 100%;pointer-events:none}#terminal{color:#00FF66;font:18px Inconsolata, monospace;font-size:20px;text-transform:uppercase;text-shadow:0 0 10px #282828, 0 0 20px #00FF66;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;padding:10%}@-webkit-keyframes flicker{0%{opacity:0.27861}5%{opacity:0.34769}10%{opacity:0.23604}15%{opacity:0.90626}20%{opacity:0.18128}25%{opacity:0.83891}30%{opacity:0.65583}35%{opacity:0.67807}40%{opacity:0.26559}45%{opacity:0.84693}50%{opacity:0.96019}55%{opacity:0.08594}60%{opacity:0.20313}65%{opacity:0.71988}70%{opacity:0.53455}75%{opacity:0.37288}80%{opacity:0.71428}85%{opacity:0.70419}90%{opacity:0.7003}95%{opacity:0.36108}100%{opacity:0.24387}}@keyframes flicker{0%{opacity:0.27861}5%{opacity:0.34769}10%{opacity:0.23604}15%{opacity:0.90626}20%{opacity:0.18128}25%{opacity:0.83891}30%{opacity:0.65583}35%{opacity:0.67807}40%{opacity:0.26559}45%{opacity:0.84693}50%{opacity:0.96019}55%{opacity:0.08594}60%{opacity:0.20313}65%{opacity:0.71988}70%{opacity:0.53455}75%{opacity:0.37288}80%{opacity:0.71428}85%{opacity:0.70419}90%{opacity:0.7003}95%{opacity:0.36108}100%{opacity:0.24387}}
+/*# sourceMappingURL=style.css.map */
